--- a/Dockerfile.ai-optimized
+++ b/Dockerfile.ai-optimized
@@ -30,11 +30,16 @@ RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
 COPY cache_models_clean.py ./
 RUN python cache_models_clean.py
 
-# Download AI model from GitHub Releases during build
+# Download AI model from GitHub Releases during build with verification
 RUN echo "Downloading AI model from GitHub Releases..." && \
-    wget -O phobert_sms_classifier.pkl \
-    "https://github.com/hoangsonmoitapcode/fraud-detection-api/releases/download/v1.0/phobert_sms_classifier.pkl" \
-    || echo "Model download failed, will download at runtime"
+    wget --progress=bar:force --timeout=300 --tries=3 \
+    -O phobert_sms_classifier.pkl \
+    "https://github.com/hoangsonmoitapcode/fraud-detection-api/releases/download/v1.0/phobert_sms_classifier.pkl" && \
+    echo "Verifying model file..." && \
+    ls -lh phobert_sms_classifier.pkl && \
+    file phobert_sms_classifier.pkl && \
+    echo "Model download completed successfully" \
+    || (echo "Model download failed, removing partial file" && rm -f phobert_sms_classifier.pkl)
 
 # Copy source code (excluding large files via .dockerignore)
 COPY src/ ./src/
