feat: Include AI model directly in Docker build (simplest approach)
- Copy phobert_sms_classifier.pkl directly into Docker image
- Update .dockerignore to include model file
- Use Dockerfile.include-model for AI builds
- No external downloads needed
- Guaranteed model availability

Trade-off: Larger build time but 100% reliable AI functionality

--- a/.dockerignore
+++ b/.dockerignore
@@ -35,11 +35,11 @@ Comprehensive_learning/
 tests/
 notebooks/
 
-# Large model files (CRITICAL: exclude from Docker build)
+# Large model files (INCLUDE phobert_sms_classifier.pkl for AI build)
 models/
-*.pkl
+# *.pkl  # COMMENTED OUT to include phobert_sms_classifier.pkl
 *.joblib
-phobert_sms_classifier.pkl
+# phobert_sms_classifier.pkl  # COMMENTED OUT to include in build
 
 # Large environments and directories
 phobert_env/
