--- a/.dockerignore
+++ b/.dockerignore
@@ -1,65 +1,133 @@
 # Git
 .git
 .gitignore
+.gitattributes
 
-# Python
-__pycache__
-*.pyc
-*.pyo
-*.pyd
-.Python
-env/
-venv/
-.venv/
-pip-log.txt
-pip-delete-this-directory.txt
-.pytest_cache/
+# Documentation
+README.md
+*.md
+docs/
+documentation/
+
+# Development files
+.env*
+.env.local
+.env.development
+.env.test
+.env.production
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Documentation
-*.md
-docs/
-Comprehensive_learning/
-
-# Development files
-.env.example
-tests/
-notebooks/
-
-# Large model files (INCLUDE phobert_sms_classifier.pkl for AI build)
-models/
-# *.pkl  # COMMENTED OUT to include phobert_sms_classifier.pkl
-*.joblib
-# phobert_sms_classifier.pkl  # COMMENTED OUT to include in build
-
-# Large environments and directories
-phobert_env/
-.venv/
-.idea/
-Comprehensive_learning/
-documentation/
-tests/
-setup/
-database/
-scripts/
-
-# Development files that shouldn't be in production
-*.log
-logs/
-.pytest_cache/
+# Python
 __pycache__/
-*.pyc
-*.pyo
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+.env/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
 
 # Logs
 *.log
 logs/
+
+# Database
+*.db
+*.sqlite3
+
+# Temporary files
+tmp/
+temp/
+.tmp/
+
+# Docker
+Dockerfile*
+docker-compose*
+.dockerignore
+
+# Railway
+railway.json
+railway.toml
+railway-*.json
+
+# Scripts
+*.ps1
+*.sh
+*.bat
+
+# Cache
+.cache/
+cache/
+
+# Large files
+*.zip
+*.tar.gz
+*.rar
+
+# Backup files
+*.bak
+*.backup
+
+# Local development
+local_test.py
+debug.py
+test_*.py
+quick_test.py
+start_and_test.py
+
+# Learning materials
+COMPREHENSIVE_LEARNING.md
+LEARNING_*.md
+NOTES_*.md
+
+# Project specific
+/data/
+/backup/
+/secrets/
+
+# Unnecessary directories
+Comprehensive_learning/
+documentation/
+scripts/
+setup/
+tests/
+config/
+database/
+
+# Note: phobert_sms_classifier.pkl is INCLUDED for AI functionality
