Fix Docker deployment issues and enhance model loading
- Add Git LFS support to Dockerfile for proper .pkl model handling
- Implement robust model loading with fallback mechanisms
- Optimize requirements for faster Railway builds (CPU-only PyTorch)
- Enhance health checks with model status verification
- Add comprehensive error handling and automatic recovery
- Update Railway config with proper timeouts and restart policies
- Add model status endpoint for detailed diagnostics
- Implement graceful degradation when model fails

--- a/.dockerignore
+++ b/.dockerignore
@@ -127,7 +127,13 @@ documentation/
 scripts/
 setup/
 tests/
-config/
 database/
 
+# Important: Keep these files for proper operation
+!config/
+!.git/
+!.gitattributes
+!phobert_sms_classifier.pkl
+
 # Note: phobert_sms_classifier.pkl is INCLUDED for AI functionality
+# .git and .gitattributes are needed for Git LFS functionality
