--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -1,4 +1,4 @@
-# Production requirements - optimized for Railway
+# Production requirements - optimized for Railway with faster builds
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy>=2.0.25
@@ -7,11 +7,18 @@ alembic==1.12.1
 pydantic>=2.5.0
 psutil>=5.9.0
 
-# Lighter ML alternatives for production
-torch==2.8.0 --index-url https://download.pytorch.org/whl/cpu
-transformers>=4.20.0
-scikit-learn>=1.0.0
+# Core ML dependencies - CPU optimized for faster builds and smaller size
+--index-url https://download.pytorch.org/whl/cpu
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
+torchaudio==2.1.0+cpu
 
-# Optional: Use CPU-only versions to reduce build time
-# torch==2.8.0+cpu --index-url https://download.pytorch.org/whl/cpu
-# torchvision==0.19.0+cpu --index-url https://download.pytorch.org/whl/cpu
+# NLP and ML utilities
+transformers==4.35.2
+tokenizers==0.15.0
+scikit-learn==1.3.2
+numpy==1.24.4
+
+# Additional utilities for model handling
+requests>=2.31.0
+pathlib2>=2.3.7
