--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,17 @@ pydantic>=2.5.0
 # System monitoring
 psutil>=5.9.0
 
-# AI/ML - CPU optimized versions
-torch>=1.9.0 --index-url https://download.pytorch.org/whl/cpu
-transformers>=4.20.0
-scikit-learn>=1.0.0
+# AI/ML - CPU optimized versions for development
+--index-url https://download.pytorch.org/whl/cpu
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
+torchaudio==2.1.0+cpu
+
+# NLP and ML utilities
+transformers==4.35.2
+tokenizers==0.15.0
+scikit-learn==1.3.2
+numpy==1.24.4
+
+# Additional utilities
+requests>=2.31.0
