--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - 'src/**'
       - 'requirements.txt'
+      - 'requirements-prod.txt'
       - 'Dockerfile'
       - '.github/workflows/docker-build.yml'
   workflow_dispatch:  # Manual trigger
@@ -17,7 +18,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 30  # Increased timeout for PyTorch CPU build
     permissions:
       contents: read
       packages: write
@@ -27,6 +28,12 @@ jobs:
       uses: actions/checkout@v4
       with:
         lfs: true  # Enable Git LFS
+        fetch-depth: 0  # Full history for better Git LFS support
+    
+    - name: Setup Git LFS
+      run: |
+        git lfs install
+        git lfs pull
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -63,6 +70,8 @@ jobs:
         build-args: |
           BUILDKIT_INLINE_CACHE=1
         outputs: type=registry
+        # Add memory limits for build process
+        shm-size: 2gb
           
     - name: Build summary
       run: |
