--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -8,10 +8,9 @@ pydantic>=2.5.0
 psutil>=5.9.0
 
 # Core ML dependencies - CPU optimized for faster builds and smaller size
---index-url https://download.pytorch.org/whl/cpu
-torch==2.1.0+cpu
-torchvision==0.16.0+cpu
-torchaudio==2.1.0+cpu
+torch==2.1.0+cpu --index-url https://download.pytorch.org/whl/cpu
+torchvision==0.16.0+cpu --index-url https://download.pytorch.org/whl/cpu
+torchaudio==2.1.0+cpu --index-url https://download.pytorch.org/whl/cpu
 
 # NLP and ML utilities
 transformers==4.35.2
