--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,9 @@ pydantic>=2.5.0
 psutil>=5.9.0
 
 # AI/ML - CPU optimized versions for development
---index-url https://download.pytorch.org/whl/cpu
-torch==2.1.0+cpu
-torchvision==0.16.0+cpu
-torchaudio==2.1.0+cpu
+torch==2.1.0+cpu --index-url https://download.pytorch.org/whl/cpu
+torchvision==0.16.0+cpu --index-url https://download.pytorch.org/whl/cpu
+torchaudio==2.1.0+cpu --index-url https://download.pytorch.org/whl/cpu
 
 # NLP and ML utilities
 transformers==4.35.2
