--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -7,17 +7,11 @@ alembic==1.12.1
 pydantic>=2.5.0
 psutil>=5.9.0
 
-# Core ML dependencies - CPU optimized for faster builds and smaller size
-torch==2.1.0+cpu --index-url https://download.pytorch.org/whl/cpu
-torchvision==0.16.0+cpu --index-url https://download.pytorch.org/whl/cpu
-torchaudio==2.1.0+cpu --index-url https://download.pytorch.org/whl/cpu
-
-# NLP and ML utilities
-transformers==4.35.2
-tokenizers==0.15.0
+# NLP and ML utilities (PyTorch will be installed separately)
+transformers==4.30.2
+tokenizers==0.13.3
 scikit-learn==1.3.2
 numpy==1.24.4
 
 # Additional utilities for model handling
 requests>=2.31.0
-pathlib2>=2.3.7
