Fix Railway build error - remove .git directory copy
- Remove COPY .git command that causes build failure on Railway
- Git LFS is already handled by GitHub Actions checkout
- Model file will be available directly from repository
- Update .dockerignore to exclude .git directory
- Keep .gitattributes for Git LFS metadata

--- a/.dockerignore
+++ b/.dockerignore
@@ -131,9 +131,11 @@ database/
 
 # Important: Keep these files for proper operation
 !config/
-!.git/
 !.gitattributes
 !phobert_sms_classifier.pkl
+
+# Exclude .git directory (not needed for Railway deployment)
+.git/
 
 # Note: phobert_sms_classifier.pkl is INCLUDED for AI functionality
 # .git and .gitattributes are needed for Git LFS functionality
