CRITICAL FIX: Force Git LFS pull for model file
ISSUE IDENTIFIED: Model file was only 134 bytes (Git LFS pointer)
SOLUTION: Force git lfs pull in Dockerfile to get actual 518MB model

Changes:
- Add .git directory to Docker build context
- Force git lfs install && git lfs pull in container
- Add model file size verification with exit on failure
- Update .dockerignore to include .git directory
- This will ensure the actual AI model file is available

Expected result: Model file will be 518MB and AI predictions will work

--- a/.dockerignore
+++ b/.dockerignore
@@ -133,9 +133,9 @@ database/
 !config/
 !.gitattributes
 !phobert_sms_classifier.pkl
+!.git/
 
-# Exclude .git directory (not needed for Railway deployment)
-.git/
+# Note: .git directory is needed for Git LFS functionality in Railway
 
 # Note: phobert_sms_classifier.pkl is INCLUDED for AI functionality
 # .git and .gitattributes are needed for Git LFS functionality
