Fix Docker build: Remove .git dependency
ISSUE: Railway build failed with .git directory not found
SOLUTION:
- Remove .git COPY from Dockerfile
- Let GitHub Actions handle Git LFS resolution before Docker build
- Add model file verification in GitHub Actions
- Fallback to heuristic mode if model file is Git LFS pointer
- Build will succeed and app will use fallback predictions

This ensures deployment succeeds even if Git LFS issues occur

--- a/.dockerignore
+++ b/.dockerignore
@@ -133,9 +133,9 @@ database/
 !config/
 !.gitattributes
 !phobert_sms_classifier.pkl
-!.git/
 
-# Note: .git directory is needed for Git LFS functionality in Railway
+# Exclude .git directory - Railway doesn't support it in build context
+.git/
 
 # Note: phobert_sms_classifier.pkl is INCLUDED for AI functionality
 # .git and .gitattributes are needed for Git LFS functionality
