--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+
+--index-url https://download.pytorch.org/whl/cpu
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+torchaudio==2.0.2+cpu
+
 # Core web framework
-fastapi==0.104.1
+fastapi==0.104.1# Core web framework
 uvicorn[standard]==0.24.0
 
 # Database
@@ -15,9 +21,7 @@ psutil>=5.9.0
 
 # AI/ML - CPU optimized versions for development
 # Install with: pip install torch==2.1.0+cpu torchvision==0.16.0+cpu torchaudio==2.1.0+cpu --index-url https://download.pytorch.org/whl/cpu
-torch==2.1.0
-torchvision==0.16.0
-torchaudio==2.1.0
+
 
 # NLP and ML utilities
 transformers==4.35.2
