--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -1,8 +1,10 @@
-# Production requirements - optimized for Railway with faster builds
+# AI/ML - CPU optimized versions for production
 --index-url https://download.pytorch.org/whl/cpu
 torch==2.0.1+cpu
 torchvision==0.15.2+cpu
 torchaudio==2.0.2+cpu
+
+# Production requirements - optimized for Railway with faster builds
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy>=2.0.25
@@ -11,7 +13,7 @@ alembic==1.12.1
 pydantic>=2.5.0
 psutil>=5.9.0
 
-# NLP and ML utilities (PyTorch will be installed separately)
+# NLP and ML utilities
 transformers==4.30.2
 tokenizers==0.13.3
 scikit-learn==1.3.2
