--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-
+# AI/ML - CPU optimized versions for development
 --index-url https://download.pytorch.org/whl/cpu
 torch==2.0.1+cpu
 torchvision==0.15.2+cpu
 torchaudio==2.0.2+cpu
 
 # Core web framework
-fastapi==0.104.1# Core web framework
+fastapi==0.104.1
 uvicorn[standard]==0.24.0
 
 # Database
@@ -18,10 +18,6 @@ pydantic>=2.5.0
 
 # System monitoring
 psutil>=5.9.0
-
-# AI/ML - CPU optimized versions for development
-# Install with: pip install torch==2.1.0+cpu torchvision==0.16.0+cpu torchaudio==2.1.0+cpu --index-url https://download.pytorch.org/whl/cpu
-
 
 # NLP and ML utilities
 transformers==4.35.2
