Update fastapi to 0.115.5 and uvicorn to 0.32.0

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -24,10 +24,10 @@ RUN pip install --no-cache-dir --upgrade pip
 
 # Install PyTorch CPU versions first, explicitly providing the index URL
 RUN pip install --no-cache-dir \
-    --index-url https://download.pytorch.org/whl/cpu \
-    torch==2.0.1+cpu \
-    torchvision==0.15.2+cpu \
-    torchaudio==2.0.2+cpu
+    --extra-index-url https://download.pytorch.org/whl/cpu \
+    torch==2.8.0+cpu \
+    torchvision==0.23.0+cpu \
+    torchaudio==2.8.0+cpu
 
 # Install the rest of the dependencies from the requirements file
 RUN pip install --no-cache-dir -r requirements-prod.txt
