--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,7 +1,7 @@
 # Optimized multi-stage build for GitHub Actions with Git LFS support
-FROM python:3.12-slim as builder
+FROM python:3.13-slim AS builder
 
-# Install system dependencies including Git LFS
+# Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     libpq-dev \
@@ -16,29 +16,29 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Set working directory
 WORKDIR /app
 
-# Copy requirements and install Python dependencies with error handling
+# Copy requirements
 COPY requirements-prod.txt ./
 
 # Upgrade pip
 RUN pip install --no-cache-dir --upgrade pip
 
-# Install PyTorch CPU versions first, explicitly providing the index URL
+# Install PyTorch CPU versions first, explicitly providing the extra index URL
 RUN pip install --no-cache-dir \
     --extra-index-url https://download.pytorch.org/whl/cpu \
-    torch==2.8.0+cpu \
-    torchvision==0.23.0+cpu \
-    torchaudio==2.8.0+cpu
+    torch==2.2.1+cpu \
+    torchvision==0.17.1+cpu \
+    torchaudio==2.2.1+cpu
 
-# Install the rest of the dependencies from the requirements file
+# Install the rest of the dependencies
 RUN pip install --no-cache-dir -r requirements-prod.txt
 
 # Clean up pip cache
 RUN pip cache purge
 
-# Production stage - minimal base
-FROM python:3.12-slim
+# --- Production stage ---
+FROM python:3.13-slim
 
-# Install runtime dependencies including Git LFS for model files
+# Install runtime dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq5 \
     curl \
@@ -55,33 +55,24 @@ RUN useradd --create-home --shell /bin/bash app
 # Set working directory
 WORKDIR /app
 
-# Set PYTHONPATH
-ENV PYTHONPATH=/app
-
-# Copy only essential Python packages
-COPY --from=builder /usr/local/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
+# Copy Python packages from builder stage
+COPY --from=builder /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.13/site-packages
 COPY --from=builder /usr/local/bin /usr/local/bin
 
-# Copy application code first
+# Copy application code
 COPY src/ ./src/
 COPY config/ ./config/
 
-# Model will be downloaded from HuggingFace Hub at runtime
-# No need to copy model file - it will be downloaded when needed
-
-# Set environment variables for better performance
+# Set environment variables
 ENV PYTHONPATH=/app \
     PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     MODEL_PATH=/app/phobert_sms_classifier.pkl \
     TOKENIZERS_PARALLELISM=false
 
-# Change ownership to app user
+# Change ownership and switch to non-root user
 RUN chown -R app:app /app
 USER app
 
 # Expose port
 EXPOSE 8000
-
-# No health check - handled by Railway configuration
-# No CMD - Railway will use startCommand from railway.json
