--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 # AI/ML - CPU optimized versions for development
 --extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.8.0+cpu
-torchvision==0.23.0+cpu
-torchaudio==2.8.0+cpu
+torch==2.2.1+cpu
+torchvision==0.17.1+cpu
+torchaudio==2.2.1+cpu
 
 # Core web framework
-fastapi==0.115.5
-uvicorn[standard]==0.32.0
+fastapi>=0.110.0
+uvicorn[standard]>=0.29.0
 
 # Database
 sqlalchemy>=2.0.25
 psycopg2-binary>=2.9.9
-alembic==1.12.1
+alembic>=1.12.1
 
 # Data validation
 pydantic>=2.5.0
@@ -20,10 +20,10 @@ pydantic>=2.5.0
 psutil>=5.9.0
 
 # NLP and ML utilities
-transformers==4.41
-tokenizers==0.15.3
-scikit-learn==1.3.2
-numpy==1.24.4
+transformers>=4.38.0
+tokenizers>=0.15.2
+scikit-learn>=1.3.2
+numpy>=1.26.4
 
 # Additional utilities
 requests>=2.31.0
