--- a/requirements.txt
+++ b/requirements.txt
@@ -5,26 +5,26 @@ torchvision==0.17.1+cpu
 torchaudio==2.2.1+cpu
 
 # Core web framework
-fastapi>=0.110.0
-uvicorn[standard]>=0.29.0
+fastapi==0.115.13
+uvicorn[standard]==0.32.0
 
 # Database
-sqlalchemy>=2.0.25
-psycopg2-binary>=2.9.9
-alembic>=1.12.1
+sqlalchemy==2.0.25
+psycopg2-binary==2.9.9
+alembic==1.12.1
 
 # Data validation
-pydantic>=2.5.0
+pydantic==2.5.0
 
 # System monitoring
-psutil>=5.9.0
+psutil==5.9.0
 
 # NLP and ML utilities
-transformers>=4.38.0
-tokenizers>=0.15.2
-scikit-learn>=1.3.2
-numpy>=1.26.4
+transformers==4.38.0
+tokenizers==0.15.2
+scikit-learn==1.3.2
+numpy==1.26.4
 
 # Additional utilities
-requests>=2.31.0
-huggingface-hub>=0.20.0
+requests==2.31.0
+huggingface-hub==0.20.0
