--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,29 @@
---extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.5.0+cpu
-torchvision==0.17.0+cpu
-torchaudio==2.5.0+cpu
+# AI/ML - Local / Development
+torch==2.5.0
+torchvision==0.23.0
+torchaudio==2.5.0
 
+# Core web framework
 fastapi==0.115.13
 uvicorn[standard]==0.32.0
+
+# Database
 sqlalchemy==2.0.25
 psycopg2-binary==2.9.9
 alembic==1.12.1
+
+# Data validation
 pydantic==2.5.0
+
+# System monitoring
 psutil==5.9.0
+
+# NLP and ML utilities
 transformers==4.38.0
 tokenizers==0.15.2
 scikit-learn==1.3.2
 numpy==1.26.4
+
+# Additional utilities
 requests==2.31.0
 huggingface-hub==0.20.0
