Downgrade scikit to 1.3.0

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -4,8 +4,10 @@ FROM python:3.12 AS builder
 WORKDIR /app
 COPY requirements.txt ./requirements.txt
 
-# Cập nhật pip và cài full packages (có PyTorch + torchvision)
-RUN pip install --no-cache-dir --upgrade pip
+# Upgrade pip, setuptools, wheel để tránh lỗi metadata
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel
+
+# Cài tất cả dependencies local (có PyTorch)
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY src/ ./src/
@@ -18,14 +20,13 @@ WORKDIR /app
 
 # Copy chỉ packages prod (không có PyTorch)
 COPY requirements-prod.txt ./requirements-prod.txt
-RUN pip install --no-cache-dir --upgrade pip
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel
 RUN pip install --no-cache-dir -r requirements-prod.txt
 
 # Copy source code
 COPY src/ ./src/
 COPY config/ ./config/
 
-# Thiết lập biến môi trường
 ENV PYTHONPATH=/app \
     PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
