--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -1,14 +1,14 @@
 # Production requirements
 fastapi==0.115.13
-uvicorn[standard]==0.32.0
+uvicorn[standard]==0.37.0
 sqlalchemy==2.0.25
-psycopg2-binary==2.9.9
-alembic==1.12.1
-pydantic==2.5.0
-psutil==5.9.0
-transformers==4.38.0
-tokenizers==0.15.2
-scikit-learn==1.7.2
-numpy==1.26.4
-requests==2.31.0
-huggingface-hub==0.20.0
+psycopg2-binary>=2.9.9
+alembic>=1.12.1
+pydantic>=2.5.0
+psutil>=5.9.0
+transformers>=4.38.0
+tokenizers>=0.15.2
+scikit-learn>=1.7.2
+numpy>=1.26.4
+requests>=2.31.0
+huggingface-hub>=0.20.0
