--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ torchaudio>=2.6.0
 
 # Core web framework
 fastapi==0.115.13
-uvicorn[standard]==0.32.0
+uvicorn[standard]>=0.32.0
 
 # Database
 sqlalchemy==2.0.25
