--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,54 +1,56 @@
-# --- Giai đoạn 1: Builder (multi-stage để giảm size) ---
+# --- Giai đoạn 1: Builder (Xưởng chế tạo) ---
+# Sử dụng Python 3.12-slim để build, giúp giảm dung lượng cache và build nhanh hơn
 FROM python:3.12-slim AS builder
 
-# Cài các công cụ cần thiết để build
+# Cài các công cụ build cần thiết
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-# Sao chép file requirements
+# Sao chép file requirements (bản đầy đủ có PyTorch)
 COPY requirements.txt ./
 
 # Nâng cấp pip
 RUN pip install --no-cache-dir --upgrade pip
 
-# Cài các package trực tiếp (CPU-only PyTorch)
-RUN pip install --no-cache-dir \
-    torch>=2.5.0+cpu \
-    torchvision>=0.20.0+cpu \
-    torchaudio>=2.6.0+cpu \
-    && pip install --no-cache-dir -r requirements.txt
+# Cài đặt TẤT CẢ các thư viện vào một môi trường ảo tạm thời để giữ mọi thứ gọn gàng
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+RUN pip install --no-cache-dir -r requirements.txt
 
-# --- Giai đoạn 2: Production ---
+
+# --- Giai đoạn 2: Production (Image cuối cùng, gọn nhẹ) ---
+# Bắt đầu từ một image slim sạch sẽ
 FROM python:3.12-slim
 
-# Cài các gói hệ điều hành tối thiểu để chạy app
+# Cài các gói hệ điều hành tối thiểu cần thiết để CHẠY ứng dụng
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq5 \
     && rm -rf /var/lib/apt/lists/*
 
-# Tạo user không phải root
+# Tạo user không phải root để tăng bảo mật
 RUN useradd --create-home --shell /bin/bash app
-
 WORKDIR /app
 
-# chép site-packages từ builder sang (không cần venv)
-COPY --from=builder /usr/local/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
-COPY --from=builder /usr/local/bin /usr/local/bin
+# *** Bước quan trọng nhất: Sao chép các gói đã cài từ builder ***
+# Chỉ sao chép các thư viện đã được cài, không cần cài lại từ đầu
+COPY --from=builder /opt/venv /opt/venv
 
 # Sao chép code ứng dụng
 COPY src/ ./src/
 COPY config/ ./config/
 
-# Biến môi trường cần thiết
+# Kích hoạt môi trường ảo và đặt các biến môi trường khác
+ENV VIRTUAL_ENV=/opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 ENV PYTHONPATH=/app \
     PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     TOKENIZERS_PARALLELISM=false
 
-# Chuyển quyền và dùng user mới
+# Chuyển quyền và sử dụng user mới
 RUN chown -R app:app /app
 USER app
 
